[package]
name = "radiokong-engine"
version = "0.2.0"
edition = "2021"
description = "RadioKong Audio Engine - Core audio capture, encoding, and streaming"
authors = ["RadioKong Team"]

[[bin]]
name = "radiokong-engine"
path = "src/main.rs"

[lib]
name = "radiokong_engine"
path = "src/lib.rs"

[features]
default = ["audio-capture"]
audio-capture = ["cpal", "dasp"]

[dependencies]
# Audio I/O (optional - requires ALSA on Linux, CoreAudio on macOS, WASAPI on Windows)
cpal = { version = "0.15", optional = true }
dasp = { version = "0.11", features = ["signal", "interpolate", "ring_buffer"], optional = true }

# Cross-platform channel (always needed for audio pipeline)
crossbeam-channel = "0.5"

# Encoding - MP3 (LAME bindings, pure Rust via static linking)
mp3lame-encoder = "0.2"

# Encoding - OGG Vorbis (pure Rust)
oxideav-ogg = "0.1"
oxideav-vorbis = "0.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Date/time for recording filenames
chrono = "0.4"

# Error handling
anyhow = "1"
thiserror = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
